--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -1,11 +1,11 @@
 [% WRAPPER ui title = global.conference.name %]
 
 <p>
-Welcome to the fourth Swiss Perl Workshop.
+Welcome to the fifth Swiss Perl Workshop.
 </p>
 
-<p>Date: Friday, 25. August 2017 and Saturday, 26. August 2017<br />
-Venue: <a href="[% make_uri('venue.html') %]">Hotel du Golf & Spa in Villars-sur-Ollon</a><br />
+<p>Date: TBC<!--Friday, 25. August 2017 and Saturday, 26. August 2017--><br />
+Venue: TBC<!--<a href="[% make_uri('venue.html') %]">Hotel du Golf & Spa in Villars-sur-Ollon</a>--><br />
 Language: English
 </p>
 
