hide references to Villars

--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -1,4 +1,4 @@
-[% WRAPPER ui title = "Getting to Villars" %]
+[% WRAPPER ui title = "Getting to The Venue" %]
 
 <!--
 <p>Villars is located in the Vaud Alps, Switzerland, at approximately 1300m altitude.</p>
