--- a/actdocs/static/villars_hotels.html
+++ b/actdocs/static/villars_hotels.html
@@ -1,4 +1,4 @@
-[% WRAPPER ui title = "Hotels, Apartments, and Chalets in Villars" %]
+[% WRAPPER ui title = "Hotels, Apartments, and Chalets Near The Venue" %]
 
 <!--
 <p>Villars is a small ski resort that tends to be reasonably quiet during the summer months,
