--- a/actdocs/static/villars_things_todo.html
+++ b/actdocs/static/villars_things_todo.html
@@ -1,4 +1,4 @@
-[% WRAPPER ui title = "Things to do in and around Villars" %]
+[% WRAPPER ui title = "Things to do in and around the venue" %]
 
 <p>The weekend of the Swiss Perl Workshop coincides with the Ollon-Villars 
 <a href="http://www.ollon-villars.com/">Historic Hill Climb</a>, which takes
