initial information for venue

--- a/actdocs/static/venue.html
+++ b/actdocs/static/venue.html
@@ -1,5 +1,14 @@
 [% WRAPPER ui title = "The Venue" %]
 
+<p>
+<img src='images/gibb_aula_februar.jpg'><br>
+<br>
+Aula Campus<br>
+Lorrainestrasse 5a<br>
+3013 Bern<br>
+Switzerland<br>
+</p>
+
 <!--
 <p>
 This year we will be in the <a target="_blank" href="http://www.hoteldugolf.ch/">Hotel du Golf & Spa in Villars-sur-Ollon</a>, which is a very short walk from the train/bus station in the center of the village.
