add dates + venue details to home page
and add more details + map to venue page and rename villars pages to
gibb

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -4,8 +4,8 @@
 Welcome to the fifth Swiss Perl Workshop.
 </p>
 
-<p>Date: TBC<!--Friday, 25. August 2017 and Saturday, 26. August 2017--><br />
-Venue: TBC<!--<a href="[% make_uri('venue.html') %]">Hotel du Golf & Spa in Villars-sur-Ollon</a>--><br />
+<p>Dates: Friday 7th September 2018 and Saturday 8th September 2018<br />
+Venue: <a href="https://www.gibb.ch">Gewerblich-Industrielle Berufsschule</a>, Bern<br />
 Language: English
 </p>
 
