added boris, commented out dirk

--- a/actdocs/static/organisers.html
+++ b/actdocs/static/organisers.html
@@ -10,17 +10,21 @@
 		<p>"Perl programmer since 1999. Regular YAPC::Europe attendee and scuba diver."</p>
 		<span>Roman Baumer</span>
 	</li>
-	<li>
+<!--	<li>
 		<img src="images/dirk.png" alt="Dirk Deimeke" />
 		<p>"Sysadmin and Taskwarrior, Community addict"</p>
 		<span>Dirk Deimeke</span>
-	</li>
+	</li>-->
 	<li>
 		<img src="images/lee.png" alt="Lee Johnson" />
 		<p>"Software developer, CPAN author, conference speaker and passionate photographer."</p>
 		<span>Lee Johnson</span>
 	</li>
-
+	<li>
+		<img src="images/boris.png" alt="Boris D&auml;ppen" />
+		<p>"Teaching with Perl"</p>
+		<span>Boris D&auml;ppen</span>
+	</li>
 </ul>
 
 
