make the conference free for non corporate attendees

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -34,6 +34,10 @@ Also, because we have rented a house with a few rooms, we are very open to any w
 -->
 
 <p>
+Please register soon to reserve your seat. The conference is FREE for private attendees, student or speakers. <a class="button-big" href="[% make_uri('register') %]">Register</a> page.
+</p>
+
+<p>
 We are looking for Sponsors. Interested? Have a look at the packages on the <a href="[% make_uri('sponsoring.html') %]">Sponsoring</a> page.
 </p>
 
