--- a/actdocs/static/registration.html
+++ b/actdocs/static/registration.html
@@ -5,25 +5,26 @@ Please register on the Act conferencing system to enrol for the Swiss Perl Works
 </p>
 
 <p>
-Please <a href="[% make_uri('main') %]">log in</a> or <a href="[% make_uri('register') %]">create a new account</a>. 
+Please <a class="button-big" href="[% make_uri('main') %]">log in</a> or <a class="button-big" href="[% make_uri('register') %]">create a new account</a>. 
 </p>
 
 <p>
-Please <a href="[% make_uri('purchase') %]"> purchase your conference ticket</a> and make your payment using online banking or by post. Details are on the invoice. 
+The conference is FREE for private attendees, students and speakers!
+</p>
+
+<p>
+Please reserve your free seat using: <a class="button-big" href="[% make_uri('purchase') %]"> purchase your conference ticket</a> (choose option "free") or buy a ticket for a corporate attendee.
+</p>
+
+<p>
+Corporate attendes: Don't forget payment using online banking or by post. Details are on the invoice. 
 </p>
 
 <p>The prices for the two day workshop are as follows:</p>
 <ul class="check-list">
-<li>CHF 200: normal attendees (corporate)</li>
-<li>CHF 100: privately paying</li>
-<li>CHF 70: students and speakers</li>
-</ul>
-
-<p>If you are able to join for a single day (friday or saturday) only, the prices are as follows:</p>
-<ul class="check-list">
-<li>CHF 100: normal attendees (corporate)</li>
-<li>CHF 60: privately paying</li>
-<li>CHF 40: students and speakers</li>
+<li>CHF 0: privately paying, students and speakers</li>
+<li>CHF 200: corporate attendees</li>
+<li>or become a <a href="[% make_uri('sponsoring.html') %]"> Sponsor</a></li>
 </ul>
 
 <p>
