--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -5,7 +5,7 @@ Welcome to the fifth Swiss Perl Workshop.
 </p>
 
 <p>Dates: Friday 7th September 2018 and Saturday 8th September 2018<br />
-Venue: <a href="https://www.gibb.ch">Gewerblich-Industrielle Berufsschule</a>, Bern<br />
+Venue: <a href="[% make_uri('venue.html') %]">Gewerblich-Industrielle Berufsschule</a>, Bern<br />
 Language: English
 </p>
 
