change link on front page

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -34,7 +34,7 @@ Also, because we have rented a house with a few rooms, we are very open to any w
 -->
 
 <p>
-Please register soon to reserve your seat. The conference is FREE for private attendees, student or speakers. <a class="button-big" href="[% make_uri('register') %]">Register</a> page.
+Please <a href="[% make_uri('register') %]">register</a>  soon to reserve your seat. The conference is FREE for private attendees, student or speakers. 
 </p>
 
 <p>
