change silly buttons back on registration page

--- a/actdocs/static/registration.html
+++ b/actdocs/static/registration.html
@@ -5,7 +5,7 @@ Please register on the Act conferencing system to enrol for the Swiss Perl Works
 </p>
 
 <p>
-Please <a class="button-big" href="[% make_uri('main') %]">log in</a> or <a class="button-big" href="[% make_uri('register') %]">create a new account</a>. 
+Please <a href="[% make_uri('main') %]">log in</a> or <a href="[% make_uri('register') %]">create a new account</a>. 
 </p>
 
 <p>
@@ -13,11 +13,11 @@ The conference is FREE for private attendees, students and speakers!
 </p>
 
 <p>
-Please reserve your free seat using: <a class="button-big" href="[% make_uri('purchase') %]"> purchase your conference ticket</a> (choose option "free") or buy a ticket for a corporate attendee.
+Please reserve your free seat using: <a href="[% make_uri('purchase') %]"> purchase your conference ticket</a> (choose option "free") or buy a ticket for a corporate attendee.
 </p>
 
 <p>
-Corporate attendes: Don't forget payment using online banking or by post. Details are on the invoice. 
+Corporate attendes: Don't forget your payment using online banking or by post. Details are on the invoice. 
 </p>
 
 <p>The prices for the two day workshop are as follows:</p>
