change wording on front page and on registration page

--- a/actdocs/static/registration.html
+++ b/actdocs/static/registration.html
@@ -13,7 +13,7 @@ The conference is FREE for private attendees, students and speakers!
 </p>
 
 <p>
-Please reserve your free seat using: <a href="[% make_uri('purchase') %]"> purchase your conference ticket</a> (choose option "free") or buy a ticket for a corporate attendee.
+Please <a href="[% make_uri('register') %]">register</a> and <a href="[% make_uri('purchase') %]">confirm your participation</a> (choose option "free") or buy a ticket using <a href="[% make_uri('purchase') %]">purchase your conference ticket</a> for a corporate attendee.
 </p>
 
 <p>
