--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -34,7 +34,7 @@ Also, because we have rented a house with a few rooms, we are very open to any w
 -->
 
 <p>
-Please <a href="[% make_uri('register') %]">register</a>  soon to reserve your seat. The conference is FREE for private attendees, student or speakers. 
+Please <a href="[% make_uri('register') %]">register</a> and <a href="[% make_uri('purchase') %]">confirm your participation</> soon, to reserve your seat. The conference is FREE for private attendees, students and speakers. Corporate attendees, please check the <a href="[% make_uri('registration.html') %]">Registration</a> page.
 </p>
 
 <p>
