--- a/actdocs/static/registration.html
+++ b/actdocs/static/registration.html
@@ -22,9 +22,9 @@ Corporate attendes: Don't forget your payment using online banking or by post. D
 
 <p>The prices for the two day workshop are as follows:</p>
 <ul class="check-list">
-<li>CHF 0: privately paying, students and speakers</li>
+<li>FREE: private attendees, students and speakers</li>
 <li>CHF 200: corporate attendees</li>
-<li>or become a <a href="[% make_uri('sponsoring.html') %]"> Sponsor</a></li>
+<li>or from CHF 300, become a <a href="[% make_uri('sponsoring.html') %]">Sponsor</a></li>
 </ul>
 
 <p>
