--- a/actdocs/static/organisers.html
+++ b/actdocs/static/organisers.html
@@ -25,6 +25,11 @@
 		<p>"Teaching with Perl"</p>
 		<span>Boris D&auml;ppen</span>
 	</li>
+	<li>
+		<img src="images/konrad.png" alt="Konrad Bucheli" />
+		<p>"Perl programmer, network debugger and too little on travel"</p>
+		<span>Konrad Bucheli</span>
+	</li>
 </ul>
 
 
