--- a/actdocs/static/organisers.html
+++ b/actdocs/static/organisers.html
@@ -27,7 +27,7 @@
 	</li>
 	<li>
 		<img src="images/konrad.png" alt="Konrad Bucheli" />
-		<p>"Perl programmer, network debugger and too little on travel"</p>
+		<p>"Perl programmer, network debugger and not enough travelling"</p>
 		<span>Konrad Bucheli</span>
 	</li>
 </ul>
