--- a/actdocs/static/gibb_hotels.html
+++ b/actdocs/static/gibb_hotels.html
@@ -1,5 +1,39 @@
 [% WRAPPER ui title = "Hotels, Apartments, and Chalets Near The Venue" %]
 
+<p>
+<!--The event will take place in the district <i>Lorraine</i>.-->
+The venue is very close to the center of Bern (more exact: you cross a <i>hughe</i> bridge over the river Aare by foot, while looking at the magnificent panorama of the Swiss Alps, and find yourself in the historiy center, next to the main train station).
+You won't have any problems regarding public transport, hotels, bars, restaurants, or whatever you're looking for.
+Below whe try to give you some hints and tipps.
+</p>
+
+<h3>Hotel Marthahaus</h3>
+
+<p>
+From hotel <a href="http://www.marthahaus.ch/pages/hotel-en/hotel-room/?oid=1861&lang=en">Marthahaus</a> you reach the venue in less than five minutes by foot.
+Breakfast buffet and public transport in the city is included in the booking.
+The hotel offers us special conditions regarding the pricing!
+<u>The offer is valid until end of march.</u>
+Please contact us by <a href="javascript:linkTo_UnCryptMailto('nbjmup;tqxAqfsm.xpsltipq/di');">Email</a> if you would like to use this special offer and stay at the Marthahaus, together with other Perlhackers, close to the venue.
+We will give you the details to arrange the booking.
+</p>
+
+<h3>Allegro and Waldhorn</h3>
+
+<p>
+The Hotels <a href="http://www.kursaal-bern.ch/Home-en">Allegro</a> Kursaal Bern and <a href="https://www.waldhorn.ch/en/">Waldhorn</a> are just a little furher but still close on the same river side and district.
+Check them out.
+</p>
+
+<h3>Youth Hostel</h3>
+
+<p>
+The <a href="https://www.youthhostel.ch/en/hostels/berne/">Youth Hostel</a> in Bern is at an absolutely phenomenal site.
+Just below the <i>Bundeshaus</i> (Federal Palace of Switzerland) next to the <a href="https://www.bern.com/en/detail/marzili">Marzili</a> the citys most popular bathing area and a social meeting place.
+Embedded in the bank of the Aare next to the Parliament Building, the Marzili pool is free to enter.
+You will have to cross the beautiful historic city to reach the venue.
+</p>
+
 <!--
 <p>Villars is a small ski resort that tends to be reasonably quiet during the summer months,
 this means you shouldn't have a problem booking a room in one of the several hotels in the
