--- a/actdocs/static/gibb_hotels.html
+++ b/actdocs/static/gibb_hotels.html
@@ -1,4 +1,4 @@
-[% WRAPPER ui title = "Hotels, Apartments, and Chalets Near The Venue" %]
+[% WRAPPER ui title = "Accommodation Near The Venue" %]
 
 <p>
 <!--The event will take place in the district <i>Lorraine</i>.-->
