fix some spelling

--- a/actdocs/static/gibb_hotels.html
+++ b/actdocs/static/gibb_hotels.html
@@ -2,9 +2,9 @@
 
 <p>
 <!--The event will take place in the district <i>Lorraine</i>.-->
-The venue is very close to the center of Bern (more exact: you cross a <i>hughe</i> bridge over the river Aare by foot, while looking at the magnificent panorama of the Swiss Alps, and find yourself in the historiy center, next to the main train station).
+The venue is very close to the center of Bern (more exact: you cross a <i>huge</i> bridge over the river Aare by foot, while looking at the magnificent panorama of the Swiss Alps, and find yourself in the historic center, next to the main train station).
 You won't have any problems regarding public transport, hotels, bars, restaurants, or whatever you're looking for.
-Below whe try to give you some hints and tipps.
+Below we try to give you some hints and tips.
 </p>
 
 <h3>Hotel Marthahaus</h3>
@@ -21,7 +21,7 @@ We will give you the details to arrange the booking.
 <h3>Allegro and Waldhorn</h3>
 
 <p>
-The Hotels <a href="http://www.kursaal-bern.ch/Home-en">Allegro</a> Kursaal Bern and <a href="https://www.waldhorn.ch/en/">Waldhorn</a> are just a little furher but still close on the same river side and district.
+The Hotels <a href="http://www.kursaal-bern.ch/Home-en">Allegro</a> Kursaal Bern and <a href="https://www.waldhorn.ch/en/">Waldhorn</a> are just a little further but still close on the same river side and district.
 Check them out.
 </p>
 
@@ -29,7 +29,7 @@ Check them out.
 
 <p>
 The <a href="https://www.youthhostel.ch/en/hostels/berne/">Youth Hostel</a> in Bern is at an absolutely phenomenal site.
-Just below the <i>Bundeshaus</i> (Federal Palace of Switzerland) next to the <a href="https://www.bern.com/en/detail/marzili">Marzili</a> the citys most popular bathing area and a social meeting place.
+Just below the <i>Bundeshaus</i> (Federal Palace of Switzerland) next to the <a href="https://www.bern.com/en/detail/marzili">Marzili</a> the cities most popular bathing area and a social meeting place.
 Embedded in the bank of the Aare next to the Parliament Building, the Marzili pool is free to enter.
 You will have to cross the beautiful historic city to reach the venue.
 </p>
