some vague things to do...

--- a/actdocs/static/gibb_things_todo.html
+++ b/actdocs/static/gibb_things_todo.html
@@ -1,5 +1,33 @@
 [% WRAPPER ui title = "Things to do in and around the venue" %]
 
+If this is your first time in Bern, don't miss the cities official <a href="https://www.bern.com/en/home">website</a> for some information.
+There is also an <a href="https://www.bern.com/en/detail/tourist-information">information center</a> at the main station.
+
+The city Bern and it's region (Canton Bern) are a world wide popular destination for tourism.
+If you are looking for some distraction besids the workshop you should find something for your taste:
+
+<ul>
+<li>urban city life</li>
+<li>culture, museums, the Federal Palace of Switzerland, ...</li>
+<li>a beautiful historiy city</li>
+<li>bears (yes!)</li>
+<li>a canyon in the midst of the city.</li>
+<li>beach life, next to a clean river</li>
+<li>the swiss alps are very close</li>
+</ul>
+
+<p>
+<img src='images/bern_luftaufnahme.png'><br>
+<small><a href="https://de.wikipedia.org/wiki/Datei:Bern_luftaufnahme.png">image source</a></small><br>
+<img src='images/bern_panorama.jpg'><br>
+<small>image source: Bern Tourism</a></small>
+</p>
+
+<p>
+Please contact us by <a href="javascript:linkTo_UnCryptMailto('nbjmup;tqxAqfsm.xpsltipq/di');">Email</a> if you have any questions or problems.
+If you tell us what you are looking for, we might be able to give you some tips and ideas, what to visit.
+</p>
+
 <!--
 <p>The weekend of the Swiss Perl Workshop coincides with the Ollon-Villars 
 <a href="http://www.ollon-villars.com/">Historic Hill Climb</a>, which takes
