--- a/actdocs/static/gibb_things_todo.html
+++ b/actdocs/static/gibb_things_todo.html
@@ -4,12 +4,12 @@ If this is your first time in Bern, don't miss the cities official <a href="http
 There is also an <a href="https://www.bern.com/en/detail/tourist-information">information center</a> at the main station.
 
 The city Bern and it's region (Canton Bern) are a world wide popular destination for tourism.
-If you are looking for some distraction besids the workshop you should find something for your taste:
+If you are looking for some distraction besides the workshop you should find something for your taste:
 
 <ul>
 <li>urban city life</li>
 <li>culture, museums, the Federal Palace of Switzerland, ...</li>
-<li>a beautiful historiy city</li>
+<li>a beautiful historic city</li>
 <li>bears (yes!)</li>
 <li>a canyon in the midst of the city.</li>
 <li>beach life, next to a clean river</li>
