add link to koordinates

--- a/actdocs/static/gibb_getting_to.html
+++ b/actdocs/static/gibb_getting_to.html
@@ -1,5 +1,11 @@
 [% WRAPPER ui title = "Getting to The Venue" %]
 
+<h3>Koordinates</h3>
+
+<p>
+See <a href="venue.html">here</a> for the koordinates to the venue.
+</p>
+
 <h3>By Air</h3>
 
 <p>
