--- a/actdocs/static/gibb_getting_to.html
+++ b/actdocs/static/gibb_getting_to.html
@@ -1,9 +1,9 @@
 [% WRAPPER ui title = "Getting to The Venue" %]
 
-<h3>Koordinates</h3>
+<h3>Coordinates</h3>
 
 <p>
-See <a href="venue.html">here</a> for the koordinates to the venue.
+See <a href="venue.html">here</a> for the coordinates to the venue.
 </p>
 
 <h3>By Air</h3>
@@ -21,7 +21,7 @@ From <a href="https://www.euroairport.com">EuroAirport Basel, Mulhouse, Freiburg
 <h3>By Train</h3>
 
 <p>
-The main train station <i>Bern, Hauptbahnhof</i> (Bern, Mainstation) is just 10 minutes by foot from the venue.
+The main train station <i>Bern, Hauptbahnhof</i> (Bern, Main station) is just 10 minutes by foot from the venue.
 </p>
 
 <p>
@@ -46,16 +46,16 @@ There is just one direction (Wankdorf), so don't worry.
 Just look for bus number 20.
 </p>
 <p>
-The bus stop next to the venue ist called <i>Bern, Gewerbeschule</i>.
+The bus stop next to the venue is called <i>Bern, Gewerbeschule</i>.
 It's just to bus stops from the main station.
 </p>
 
 <h3>By Foot</h3>
 
 <p>
-At main station ask the directon for <i>Lorraine Quartier</i> (district Lorraine).
+At main station ask the direction for <i>Lorraine Quartier</i> (district Lorraine).
 You will be pointed to descend a bit along the main station.
-After 5 minutes walk you will see a hughe bridge, crossing a river.
+After 5 minutes walk you will see a huge bridge, crossing a river.
 Cross the bridge, enjoy the view, after the bridge the venue is on the campus at your left.
 </p>
 
