update special offer

--- a/actdocs/static/gibb_hotels.html
+++ b/actdocs/static/gibb_hotels.html
@@ -7,15 +7,27 @@ You won't have any problems regarding public transport, hotels, bars, restaurant
 Below we try to give you some hints and tips.
 </p>
 
+<p>
+If you stay in any hotel in Bern, you will have public transport in the city included during your visit.
+</p>
+
 <h3>Hotel Marthahaus</h3>
 
 <p>
-From hotel <a href="http://www.marthahaus.ch/pages/hotel-en/hotel-room/?oid=1861&lang=en">Marthahaus</a> you reach the venue in less than five minutes by foot.
-Breakfast buffet and public transport in the city is included in the booking.
+From hotel <a href="http://www.marthahaus.ch/pages/hotel-en/hotel-room/?oid=1861&lang=en">Marthahaus</a> you reach the venue in three minutes by foot.
+Breakfast buffet and Wifi is included in the booking.
+Bathroom is shared per floor.
 The hotel offers us special conditions regarding the pricing!
-<u>The offer is valid until end of march.</u>
-Please contact us by <a href="javascript:linkTo_UnCryptMailto('nbjmup;tqxAqfsm.xpsltipq/di');">Email</a> if you would like to use this special offer and stay at the Marthahaus, together with other Perlhackers, close to the venue.
-We will give you the details to arrange the booking.
+<ul>
+<li>Double room: CHF 125 per night</li>
+<li>Single room: CHF 80 per night</li>
+</ul>
+<u>The special offer is valid until end of may.</u>
+Consider booking if you would like to use this offer and stay at the Marthahaus, together with other Perlhackers, close to the venue.
+Just mention that you are booking for the Swiss Perl Workshop, to get the reduction.
+
+We have visited the hotel.
+It seemed clean, friendly and had a community award from booking.com for the year 2017 displayed on the desk.
 </p>
 
 <h3>Allegro and Waldhorn</h3>
