--- a/actdocs/static/gibb_hotels.html
+++ b/actdocs/static/gibb_hotels.html
@@ -2,7 +2,7 @@
 
 <p>
 <!--The event will take place in the district <i>Lorraine</i>.-->
-The venue is very close to the center of Bern (more exact: you cross a <i>huge</i> bridge over the river Aare by foot, while looking at the magnificent panorama of the Swiss Alps, and find yourself in the historic center, next to the main train station).
+The venue is very close to the center of Bern.
 You won't have any problems regarding public transport, hotels, bars, restaurants, or whatever you're looking for.
 Below we try to give you some hints and tips.
 </p>
@@ -17,15 +17,8 @@ If you stay in any hotel in Bern, you will have public transport in the city inc
 From hotel <a href="http://www.marthahaus.ch/pages/hotel-en/hotel-room/?oid=1861&lang=en">Marthahaus</a> you reach the venue in three minutes by foot.
 Breakfast buffet and Wifi is included in the booking.
 Bathroom is shared per floor.
-The hotel offers us special conditions regarding the pricing!
-<ul>
-<li>Double room: CHF 125 per night</li>
-<li>Single room: CHF 80 per night</li>
-</ul>
-<u>The special offer is valid until end of may.</u>
-Consider booking if you would like to use this offer and stay at the Marthahaus, together with other Perlhackers, close to the venue.
-Just mention that you are booking for the Swiss Perl Workshop, to get the reduction.
-
+</p>
+<p>
 We have visited the hotel.
 It seemed clean, friendly and had a community award from booking.com for the year 2017 displayed on the desk.
 </p>
