change old apw email with spw email link in code-of-conduct

--- a/actdocs/static/code_of_conduct.html
+++ b/actdocs/static/code_of_conduct.html
@@ -30,7 +30,7 @@ Alert conference organizers if you notice a dangerous situation or someone in di
 
 <h1>6. What to do if you witness or are subject to unacceptable behavior</h1>
 
-<p>If you are subject to unacceptable behavior, notice that someone else is being subject to unacceptable behavior, or have any other concerns, please notify apw-orga@googlegroups.com and / or one of the organizers in person as soon as possible.</p>
+<p>If you are subject to unacceptable behavior, notice that someone else is being subject to unacceptable behavior, or have any other concerns, please notify the <a href="javascript:linkTo_UnCryptMailto('nbjmup;tqxAqfsm.xpsltipq/di');">organisers by email</a>  and / or one of the organizers in person as soon as possible.</p>
 
 <h1>7. License and attribution</h1>
 
