--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -5,8 +5,8 @@ We are very happy to have the following sponsors on board. Without them the conf
 </p>
 <hr />
 
-<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a><br />
-GivenGain is the global leader in cloud-based activism. Our platform enables organisations to run better fundraising operations and increase revenue with tools that allow them to build and manage relationships and win support for the ideas they believe in.
+<a target="_blank" href="https://www.humanstate.com/"><img src="[% make_uri_info('images', 'humanstate.png') %]" alt="Humanstate" /></a><br />
+Founded in 2001, Humanstate is a private technology services group that provides businesses and organisations in various vertical markets with state-of-the-art web-based software applications integrated with on-demand payment processing. Humanstate owns and manages a global transactional platform that forms the core of all its solutions.
 <hr />
 <br />
 
