--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -28,7 +28,7 @@ Perl Services is the contracting company of Renée Bäcker, a CPAN author (<a ta
 <br />
 
 <a target="_blank" href="http://www.open.ch/"><img src="[% make_uri_info('images', 'open-systems.png') %]" alt="Open Systems AG" /></a><br />
-Open Systems focuses on network security application delivery identity management and global connectivity, all integrated by a service management that creates an unmatched client experience.
+Open Systems focuses on network security, application delivery, identity management and global connectivity, all integrated by a service management that creates an unmatched client experience.
 
 <hr />
 <br />
