--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -33,6 +33,11 @@ Open Systems focuses on network security, application delivery, identity managem
 <hr />
 <br />
 
+<a target="_blank" href="https://www.baumer-its.ch/"><img src="[% make_uri_info('images', 'baumer_it-services.svg') %]" width="210px" alt="baumer it-services" /></a><br />
+baumer it-services is offering software development in Perl, Identity Management consulting, as well as Security and Systems Engineering.
+<hr />
+<br />
+
 <!--
 <a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="booking.com" /></a><br />
 Booking.com is one of the world’s leading e-commerce companies. 
