Revert "corrected price for ticket"
This reverts commit 19ef64bc40b25ec637005849887d3658e724ce47.

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -34,9 +34,7 @@ Also, because we have rented a house with a few rooms, we are very open to any w
 -->
 
 <p>
-Please <a href="[% make_uri('register') %]">register</a> and <a href="[% make_uri('purchase') %]">confirm your participation</a> soon, to reserve your seat.
-The participation is FREE OF CHARGE, thanks to our generous sponsors.
-<!--The conference is FREE for private attendees, students and speakers. Corporate attendees, please check the <a href="[% make_uri('registration.html') %]">Registration</a> page.-->
+Please <a href="[% make_uri('register') %]">register</a> and <a href="[% make_uri('purchase') %]">confirm your participation</a> soon, to reserve your seat. The conference is FREE for private attendees, students and speakers. Corporate attendees, please check the <a href="[% make_uri('registration.html') %]">Registration</a> page.
 </p>
 
 <p>
