add Edument logo and Sponsor text

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -10,6 +10,11 @@ Founded in 2001, Humanstate is a private technology services group that provides
 <hr />
 <br />
 
+<a target="_blank" href="https://edument.se/en/"><img src="[% make_uri_info('images', 'Edument-logo-standard.png') %]" width="210px" alt="Edument" /></a><br />
+<p>Edument is the company behind the Perl 6 IDE <a href="https://commaide.com/" target="_blank">Comma</a>, and the <a href="https://cro.services/" target="_blank">Cro</a> libraries for building distributed systems in Perl 6. Edument offer <a href="https://edument.se/en/concept-and-product-development" target="_blank">consulting</a>, <a href="https://edument.se/en/codebuddy" target="_blank">mentoring</a>, and <a href="https://edument.se/en/education" target="_blank">developer education</a> in a wide range of technologies, including Perl, JavaScript and web development, Git, C, C++, and .Net. With offices in Sweden and Prague, we are the knowledge based company.</p>
+<hr />
+<br />
+
 <a target="_blank" href="http://www.oetiker.ch/"><img src="[% make_uri_info('images', 'op-logo-200.png') %]" alt="Oetiker + Partner AG" /></a><br />
 OETIKER+PARTNER is a Swiss system management and software development company. Employees from O+P are involved in many Open Source Software projects.
 <hr />
