added gibb logo to sponsors page

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -5,6 +5,15 @@ We are very happy to have the following sponsors on board. Without them the conf
 </p>
 <hr />
 
+<a target="_blank" href="https://www.gibb.ch/"><img src="[% make_uri_info('images', 'gibb_logo.png') %]" alt="gibb" /></a><br />
+The Commercial-Industrial Vocational School in Bern (gibb) is a Institution of the canton Bern for professional education and qualification.
+The school hosts about 600 teachers and 7000 Apprentice from over 60 different professions.
+An unserer Schule unterrichten rund 600 Lehrkräfte und Dozierende ca. 7000 Lernende aus über 60 Berufen sowie etwa 1'000 gelernte Berufsleute.
+<br />
+The gibb is providing this years venue and infrastructure.
+<hr />
+<br />
+
 <a target="_blank" href="https://www.humanstate.com/"><img src="[% make_uri_info('images', 'humanstate.png') %]" alt="Humanstate" /></a><br />
 Founded in 2001, Humanstate is a private technology services group that provides businesses and organisations in various vertical markets with state-of-the-art web-based software applications integrated with on-demand payment processing. Humanstate owns and manages a global transactional platform that forms the core of all its solutions.
 <hr />
