--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -6,11 +6,10 @@ We are very happy to have the following sponsors on board. Without them the conf
 <hr />
 
 <a target="_blank" href="https://www.gibb.ch/"><img src="[% make_uri_info('images', 'gibb_logo.png') %]" alt="gibb" /></a><br />
-The Commercial-Industrial Vocational School in Bern (gibb) is a Institution of the canton Bern for professional education and qualification.
-The school hosts about 600 teachers and 7000 Apprentice from over 60 different professions.
-An unserer Schule unterrichten rund 600 Lehrkräfte und Dozierende ca. 7000 Lernende aus über 60 Berufen sowie etwa 1'000 gelernte Berufsleute.
+The Commercial-Industrial Vocational School in Bern (gibb) is an institution of the canton for professional education and qualification.
+The school hosts about 600 teachers and 7000 apprentice from over 60 different professions.
 <br />
-The gibb is providing this years venue and infrastructure.
+gibb is providing this years venue and infrastructure.
 <hr />
 <br />
 
